--- a/style/style.css
+++ b/style/style.css
@@ -5,5 +5,5 @@
 .car {
     width: 50px;
     height: 100px;
-    background: url('../img/car.jpg') center / cover no-repeat;
+    background: url('../img/car.png') center / cover no-repeat;
 }
