--- a/style/style.css
+++ b/style/style.css
@@ -143,13 +143,11 @@ table {
     height: 100px;
     background: url('../img/car.png') center / cover no-repeat;
     position: absolute;
-    left: 125px;
-    bottom: 10px;
 }
 
 .gameArea {
     width: 300px;
-    height: 800px;
+    height: 900px;
     position: relative;
     margin: auto;
     background: #222;
@@ -162,4 +160,36 @@ table {
     height: 50px;
     background: #fff;
     left: 145px;
+}
+
+.start {
+    position: absolute;
+    left: 0;
+    top:0;
+    margin: 0;
+    width: 100%;
+    padding: 2rem 0;
+    text-align: center;
+    z-index: 100;
+    color: #fff;
+    font-size: 1.5rem;
+    background: black;
+    cursor: pointer;
+    font-family: sans-serif;
+    font-weight: 700;
+}
+
+.score {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: black;
+    padding: 1rem 0;
+    z-index: 200;
+    font-size: 1.5rem;
+    font-family: sans-serif;
+    font-weight: 500;
+    color: skyblue;
+    text-align: center;
 }
